fix the pixel misalignment of the "From" and "To" text

--- a/src/components/CryptoSwap/index.module.scss
+++ b/src/components/CryptoSwap/index.module.scss
@@ -70,8 +70,8 @@
                             position: absolute;
                             width: 35px;
                             height: 22px;
-                            left: 11.9px;
-                            top: 8.5px;
+                            left: 12px;
+                            top: 9px;
                             font: 600 normal 14px Inter;
                             line-height: 22px;
                             color: #8C8C8C;
@@ -184,7 +184,7 @@
                             position: absolute;
                             width: 17px;
                             height: 22px;
-                            left: 11.9px;
+                            left: 12px;
                             top: 9px;
                             font: 600 normal 14px Inter;
                             line-height: 22px;
@@ -290,7 +290,7 @@
                         .cryptoSelectModalTitle {
                             position: absolute;
                             left: 12px;
-                            top: 10.67px;
+                            top: 9px;
                             font: 600 normal 14px Inter;
                             line-height: 22px;
                             color: #000000;
